Fix logo and name alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,26 +14,31 @@ main {
 }
 
 .navbar {
-    width: 1200px; 
+    width: 100%; 
     height: 75px; 
     margin: auto;
+    text-align: center;
+    padding: 5px;
+}
+
+.logo {
+    display: inline-block;
 }
 
 .logo img {
     width: 100px; 
     height: auto; 
-    float: left; 
-    margin-top: 2px; 
-    margin-left: 5px;
+    margin-top: 2px;
+    vertical-align: middle;
 }
 
 .name {
     color: white; 
     font-size: 35px; 
     font-family: Arial; 
-    padding-left: 20px; 
-    float: left; 
-    padding-top: 16px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: 2px;
 }
 
 .footer {
